fixed image size on small screens

--- a/apps/nk-associates-frontend/app/globals.css
+++ b/apps/nk-associates-frontend/app/globals.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .container {
-    @apply w-full px-4 md:px-8 mx-auto;
+    @apply w-full max-w-container px-4 md:px-8 mx-auto;
   }
 }
 
